Mise en ligne Railway

--- a/env.env
+++ b/env.env
@@ -1,2 +1,10 @@
 
+# Clé secrète pour les sessions Express
 SESSION_SECRET=tonSecretDeSession
+
+# Paramètres Railway (tirés de l'URL fournie)
+DB_HOST=tramway.proxy.rlwy.net
+DB_USER=root
+DB_PASSWORD=ofqMnxAtCsCQndWrZCGjFrlkexDTZgSG
+DB_NAME=railway
+DB_PORT=22502
